--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-# Compiled class file
+.idea
+*.iml
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
+target
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -13,11 +9,7 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
